# swganh

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  LICENSE  README.markdown  bootstrap.bat  bootstrap.sh  build_deps.bat  build_server.bat  init.sh
src/: CMakeLists.txt  anh_definitions.h  version.h.in
src/anh/: CMakeLists.txt  active_object.cc  active_object.h  active_object_unittest.cc  application.cc  application.h  application_interface.h  application_unittest.cc  byte_buffer-inl.h  byte_buffer.cc  byte_buffer.h  byte_buffer_unittest.cc  clock.cc  clock.h  crc.cc  crc.h  crc_unittest.cc  delayed_task_processor.h  event_dispatcher.cc  event_dispatcher.h  glm_binding.cc  glm_binding.h  hash_string.cc  hash_string.h  hash_string_unittest.cc  logger.cpp  logger.h  python_shared_ptr.h  random_generator.cc  random_generator.h  shared_services.h  singleton.h  timing.h  utilities.cc  utilities.h  utilities_unittest.cc  utility_python.h
src/anh/app/: app_interface.h  kernel_interface.h
src/anh/component/: attribute_mapper_interface.h  base_component.cc  base_component.h  component_info.h  component_interface.h  component_loader_interface.h  db_mapper_interface.h  entity-inl.h  entity.cc  entity.h  entity_builder.cc  entity_builder.h  entity_builder_unittest.cc  entity_manager-inl.h  entity_manager.cc  entity_manager.h  entity_manager_unittest.cc  entity_unittest.cpp  mock_component.h  mock_message.h  object_builder.cc  object_builder.h  object_builder_unittest.cc  object_manager-inl.h  object_manager.cc  object_manager.h  object_manager_unittest.cc  test_components_unittest.cc  test_components_unittest.h
src/anh/database/: base_db_mapper.h  database_manager.cc  database_manager.h  database_manager_interface.h  database_manager_unittest.cc  mock_cppconn.h  mock_database_manager.h  mock_db_mapper.h
src/anh/event_dispatcher/: basic_event.cc  basic_event.h  basic_event_unittest.cc  event_dispatcher.cc  event_dispatcher.h  event_dispatcher_interface.h  event_dispatcher_unittest.cc  event_interface.h  mock_event_dispatcher.h
src/anh/grid/: grid.h  grid_unittest.cc  spatial_index_manager.cc  spatial_index_manager_unittest.cc
src/anh/module/: bindings.h  module_manager.cc  module_manager.h  module_manager_interface.h
src/anh/module_manager/: mock_module.h  mock_module_loader.h  mock_platform_services.h  module.h  module_interface.h  module_loader_interface..h  module_main.h  module_manager.cc  module_manager.h  module_manager_unittest.cc  platform_services.cc  platform_services.h  platform_services_unittest.cc  shared_services.h  unix_module.cc  unix_module.h  unix_module_unittest.cc  win32_module.cc  win32_module.h  win32_module_loader.cc  win32_module_loader.h  win32_module_unittest.cc
src/anh/network/: mock_boost_asio_io_service.h  mock_socket.h  network_events.h  socket_interface.h
src/anh_components/: CMakeLists.txt
src/api/: CMakeLists.txt  component_main.h
src/character/: CMakeLists.txt  character_service.cc  character_service.cc.orig  character_service.h  character_service.h.orig  main.cc  main.cc.orig  main.h
src/components/: CMakeLists.txt  appearance_component.cc  appearance_component.h  spatial_index_component.h  tag_component.cc  tag_component.h  transform_component.cc  transform_component.h  transform_component_unittest.cc
src/connection/: CMakeLists.txt  connection_app.cc  connection_app.h  connection_client.h  connection_service.cc  connection_service.cc.orig  connection_service.h  connection_service.h.orig  main.cc  main.cc.orig  main.h
src/example_app/: example_app.cc  python_obj.cc  python_obj.h
src/example_module/: main.cc  test_obj.h
src/login/: CMakeLists.txt  account.cc  account.h  authentication_manager.cc  authentication_manager.h  galaxy_status.h  login_app.cc  login_app.h  login_client.cc  login_client.h  login_server.cc  login_server.h  login_server_unittest.cc  login_service.cc  login_service.cc.orig  login_service.h  login_service.h.orig  login_service_interface.h  main.cc  main.cc.orig  main.h
src/mod_anh_transform/: CMakeLists.txt  main.cc  main.h  transform_component.cc  transform_component.h  transform_component_unittest.cc  transform_db_mapper.cc  transform_db_mapper.h
src/packets/: BasePacket.h  CMakeLists.txt  DataChannelMessage.h  DeltasMessage.h  ErrorMessage.h  NetworkEventMessage.h  RemoteMessage.h  base_anh_packet.h  base_swg_message.h  base_swg_packet.h  base_swg_packet_unittest.cc  client_example_packet.h  opcodes.h  server_client_example_packet.h  server_example_packet.h  session.h
src/plugins/: CMakeLists.txt
src/pub14_core/: CMakeLists.txt  main.cc
src/script_bindings/: CMakeLists.txt  python gotchas.txt
src/shared_services/: CMakeLists.txt  main.cc  shared_services_app.cc  shared_services_app.h
src/swganh/: CMakeLists.txt  active_object.h  byte_buffer-inl.h  byte_buffer.cc  byte_buffer.h  byte_buffer_unittest.cc  crc.cc  crc.h  crc_unittest.cc  event_dispatcher.cc  event_dispatcher.h  glm_binding.h  hash_string.cc  hash_string.h  hash_string_unittest.cc  logger.cpp  logger.h  main.cc  python_shared_ptr.h  random_generator.cc  random_generator.h  swganh_app.cc  swganh_app.h  swganh_app_unittest.cc  swganh_binding.cc  swganh_binding.h  thread_pool.cc  thread_pool.h  utilities.cc  utilities_unittest.cc
src/swganh_core/: CMakeLists.txt  main.cc
src/swged/: CMakeLists.txt  ChildFrm.cpp  ChildFrm.h  ChildView.cpp  ClassView.cpp  ClassView.h  FileView.cpp  FileView.h  HexDoc.cpp  HexDoc.h  HexView.cpp  HexView.h  MFCApplication4.aps  MFCApplication4.cpp  MFCApplication4.h  MFCApplication4.rc  MFCApplication4Doc.cpp  MFCApplication4Doc.h  MFCApplication4View.cpp  MFCApplication4View.h  MainFrm.cpp  MainFrm.h  OutputWnd.cpp  OutputWnd.h  ProgressDialog.cpp  ProgressDialog.h  PropertiesWnd.cpp  PropertiesWnd.h  Resource.h  SWGEd.aps  SWGEd.cpp  SWGEd.h  SWGEd.rc  TreDoc.cpp  TreDoc.h  TreDocManager.cpp  TreDocManager.h  TreDocTemplate.cpp  TreDocTemplate.h  TreDocumentManager.cpp  (+7 more)
src/test_module/: CMakeLists.txt  main.cc  main.h
src/zone/: CMakeLists.txt  main.cc  zone_app.cc  zone_app.h
(+18664 files in other folders)
